Newest at the top
YYYY-MM-DD HR:MIN - comment

2016-03-21 13:36 - Added usable methods that will be used in the future
2016-03-15 22:00 - Made capitalization changes in instructor names; reformatted XML files
2016-03-13 15:35 - Updated the 3 xml faucets to match new schedule.dtd
2016-03-11 14:33 - Updated schedule according to the feedback given
2016-03-10 14:12 - fixed timetable.xml to have 24HR clock instead of 12HR
2016-03-10 14:08 - created and filled in the timetable.xml file
2016-03-10 13:53 - added location of data folder to constants
2016-03-07 15:03 - Updated the days.xml to reflect post-readingbreak schedule
2016-03-07 14:53 - removed timetable tag from the 3 xml views
                 - adjusted schedule.dtd to use courses properly
                 - added entity array to master.xml so it uses 3 views
2016-03-06 22:22 - courses.xml is created and wrote out full name for instructors
2016-03-06 21:04 - Added type in the course ATTLIST
2016-03-06 00:11 - Created and filled in MON and TUE for days.xml and WED for 
				   timeslots.xml. Redefined minor parts to the DTD. 
                    timeslots.xml. Redefined minor parts to the DTD.
2016-03-05 23:39 - Created base for schedule.dtd and created master.xml
2016-03-03 9:49 - Initial setup